--- a/app/views/admin/formations/new.html.slim
+++ b/app/views/admin/formations/new.html.slim
@@ -8,5 +8,5 @@
 
 hr
 
-= form_for(@form, url: admin_formations_path, html: {class: "form-horizontal"}) do |f|
+= form_for(@formation, url: admin_formations_path, html: {class: "form-horizontal"}) do |f|
   = render "form", f: f
