Add formation ordering tests #2

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,7 +1,7 @@
 .container.mx-auto.mb-24
   h1.text-xl Contenu
 
-div
+.container.mx-auto.mb-24
   .w-1/2.text-center
     .md:w-3/4.mx-auto
       p.text-xl.mb-6 Vous souhaitez gagner en compétence ou professionnaliser votre équipe ?
