--- a/app/views/admin/formations/index.html.slim
+++ b/app/views/admin/formations/index.html.slim
@@ -15,6 +15,14 @@ div data-controller='manage-index'
             class: "form-control dropdown-action", \
             id: "dropdown_action",  \
             data: {action: 'change->manage-index#submitFilterForm'}
+        .col-lg-4.col-md-6.col-12
+          = label_tag "Par année"
+          = select_tag :by_year, \
+            options_for_select(formation_year_options, params[:by_year]), \
+            prompt: "Toutes les années",\
+            class: "form-control dropdown-action", \
+            id: "dropdown_action",  \
+            data: {action: 'change->manage-index#submitFilterForm'}
 
   .cadre-table
     table.table.table-striped.table-hover.table-sm
