--- a/app/views/formations/subscriptions/_participant_fields.html.slim
+++ b/app/views/formations/subscriptions/_participant_fields.html.slim
@@ -22,10 +22,10 @@
       = f.email_field :email, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :phone, class:"block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :phone, class:"required block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
       = f.text_field :phone, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
   small= link_to "Supprimer", "#", data: { action: "click->nested-fields#remove_association" }, class: "js-delete-link underline"
-
+  br
   = f.hidden_field :_destroy
-  small.italic * : Champs obligatoire
+  small.italic * : Champs obligatoire, notamment pour pouvoir vous contacter pour l'organisation ou les changements de dernière minute des formations
