--- a/app/views/admin/formations/_schedule_fields.html.slim
+++ b/app/views/admin/formations/_schedule_fields.html.slim
@@ -14,11 +14,11 @@
     .col-md-1.col-xs-4.xs-gutter.col-label-valign.col-label-valign--sm.col-label-valign--mobile.text-sm-center
       = f.label :start_at, "de", class: 'form-label'
     .col-md-2.col-xs-8.xs-gutter
-      = f.text_field :start_at, class: 'form-control', maxlength: 5, data: {is_timepicker: ""}, value: safe_l(f.object.start_at.try(:to_time), format: :hour_min), placeholder: "ex : 17:15"
+      = f.text_field :start_at, class: 'form-control', maxlength: 5, data: {target: "nested-fields.copyField"}, value: safe_l(f.object.start_at.try(:to_time), format: :hour_min), placeholder: "ex : 17:15"
     .col-md-1.col-xs-4.xs-gutter.col-label-valign.col-label-valign--sm.col-label-valign--mobile.text-sm-center
       = f.label :end_at, "à", class: 'form-label'
     .col-md-2.col-xs-8.xs-gutter
-      = f.text_field :end_at, class: 'form-control', maxlength: 5, data: {is_timepicker: ""}, value: safe_l(f.object.end_at.try(:to_time), format: :hour_min), placeholder: "ex : 19:27"
+      = f.text_field :end_at, class: 'form-control', maxlength: 5, data: {target: "nested-fields.copyField"}, value: safe_l(f.object.end_at.try(:to_time), format: :hour_min), placeholder: "ex : 19:27"
     .col-md-1.col-xs-4.xs-gutter.col-label-valign.col-label-valign--sm.col-label-valign--mobile.text-sm-center
       = link_to "#", data: { action: "click->nested-fields#remove_association" }, class: "js-delete-link btn btn-sm btn-danger" do
         i.far.fa-trash-alt
