--- a/app/views/formations/subscriptions/_participant_fields.html.slim
+++ b/app/views/formations/subscriptions/_participant_fields.html.slim
@@ -4,7 +4,7 @@
     .md:w-1/3
       = f.label :organization, class:"block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
-      = f.text_field :organization, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
+      = f.text_field :organization, data: {target: 'nested-fields.copyField'}, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
       = f.label :firstname, class:"required block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
