--- a/app/front/styles/application.scss
+++ b/app/front/styles/application.scss
@@ -16,3 +16,5 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import "application/layout.sass";
 @import "application/form.sass";
 @import "application/flash-message.sass";
+@import "application/breadcrumb.sass";
+@import "application/post-card.sass";
