--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -8,7 +8,7 @@
 
   // TODO EN FONCTION DES PROJETS
   - if defined?(Post)
-    = link_to "Ajouter une actualité", admin_blog_root_path, title: "Actualités", class: 'btn btn-info'
+    = link_to "Ajouter une actualité", admin_posts_path, title: "Actualités", class: 'btn btn-info'
   - if defined?(Contact)
     = link_to "Demandes de contact", admin_contacts_path, title: 'Contacts', class: 'btn btn-info'
 
