--- a/app/views/admin/formation_categories/edit.html.slim
+++ b/app/views/admin/formation_categories/edit.html.slim
@@ -1,6 +1,6 @@
 .title-wrapper
   h1
-    ' Édition du thème "#{@formation_category.title}"
+    ' Édition de la catégorie "#{@formation_category.title}"
 
   div.flex
     = link_to admin_formation_categories_path, class: "btn btn-light mr-4" do
