--- a/app/views/admin/participants/index.html.slim
+++ b/app/views/admin/participants/index.html.slim
@@ -1,4 +1,4 @@
-/ = link_to "Ajouter un participant", new_admin_participant_path, class:'btn btn-primary float-right'
+= link_to "Ajouter un participant", formations_path, class:'btn btn-primary float-right', target: '_blank'
 h1.mb-5 Participant·es
 
 
