--- a/app/views/themes/show.html.slim
+++ b/app/views/themes/show.html.slim
@@ -13,8 +13,16 @@
         - @theme.activities.order_by_theme_interface_position.each do |activity|
           li = link_to activity.title, activity_path(activity), class: "underline"
 
-    .w-1/3
-      h3.text-2xl.font-bold.mb-3 Ressources
+    - if @theme.resources.any?
+      .w-1/3
+        h3.text-2xl.font-bold.mb-3 Ressources
+        ul
+        - @theme.resources.each do |resource|
+          li
+            - if resource.link?
+              = link_to resource.title, resource.link
+            - else
+              p = resource.title
 
 
   h2.text-2xl.font-bold.mt-12.mb-4 Les actualités en lien avec cette mission
