--- a/app/views/formations/show.html.slim
+++ b/app/views/formations/show.html.slim
@@ -1,9 +1,2 @@
 .container.mx-auto
-  h1.text-6xl.font-bold.text-center.mt-16.mb-4.text-gray-900 = @activity.title
-  .flex
-    - @activity.themes.each do |theme|
-      .bg-primary.px-3.py-2.mr-2
-        = theme.title
-  - if @activity.image.present?
-    = image_tag  @activity.image, class: "mb-8 mx-auto"
-  .mb-24== @activity.description
+  = render 'formations/formation_card', formation: @formation
