--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -64,6 +64,7 @@ html lang='fr'
           span.font-semibold.text-xl.tracking-tight = Setting.project_name
         .flex.items-center.text-white.flex-1.justify-end
           .flex.text-sm.items-center.justify-end
+            = link_to "Formations", formations_path, class: "block mr-2"
             a.block.hidden.md:inline-block.text-teal-200.hover:text-white.mr-4 href="#responsive-header" 
               | Profils
             a.inline-block.text-sm.px-4.py-2.leading-none.border.rounded.text-white.border-white.ml-2.hover:border-transparent.hover:text-teal-500.hover:bg-white href="#"  Contact
