--- a/app/views/themes/show.html.slim
+++ b/app/views/themes/show.html.slim
@@ -17,13 +17,7 @@
       .w-1/3
         h3.text-2xl.font-bold.mb-3 Ressources
         ul
-        - @theme.resources.each do |resource|
-          li
-            - if resource.link?
-              = link_to resource.title, resource.link
-            - else
-              p = resource.title
-
+          = render partial: 'resources/resource', collection: @theme.resources, as: :resource
 
   h2.text-2xl.font-bold.mt-12.mb-4 Les actualités en lien avec cette mission
   - @theme.posts.each do |post|
