--- a/app/views/admin/formations/_form.html.slim
+++ b/app/views/admin/formations/_form.html.slim
@@ -61,6 +61,7 @@
           i.far.fa-plus-square>
           ' Ajouter une date
 
+= render "admin/shared/enabled_field", f: f
 
 = render partial: 'admin/seos/fields_for_form', locals: { f: f }
 
