--- a/app/views/posts/_card.html.slim
+++ b/app/views/posts/_card.html.slim
@@ -10,5 +10,5 @@
   .px-6.pt-4.pb-2
     - if post.post_category.present?
       span.inline-block.bg-gray-200.rounded-full.px-3.py-1.text-sm.font-semibold.text-gray-700.mr-2.mb-2 = post.post_category.title
-    - post.themes.each do |theme|
+    - post.themes.enabled.each do |theme|
       span.inline-block.bg-gray-200.rounded-full.px-3.py-1.text-sm.font-semibold.text-gray-700.mr-2.mb-2 = theme.title
