--- a/app/views/admin/activities/_form.html.slim
+++ b/app/views/admin/activities/_form.html.slim
@@ -23,6 +23,8 @@
   f: f, \
   destroy_path: f.object.image.present? ? destroy_upload_admin_activity_path(f.object, f.object.image.id, redirect: :edit) : nil}
 
+= render "admin/shared/enabled_field", f: f
+
 = render partial: 'admin/seos/fields_for_form', locals: { f: f }
 
 .action-btns
