--- a/app/views/admin/themes/_form.html.slim
+++ b/app/views/admin/themes/_form.html.slim
@@ -18,6 +18,8 @@
 
 = render "admin/resources/nested_form", f: f
 
+= render "admin/shared/enabled_field", f: f
+
 = render partial: 'admin/seos/fields_for_form', locals: { f: f }
 
 .action-btns
