--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -38,7 +38,7 @@ html lang='fr'
                     .w-2/3
                       h4.uppercase.font-bold.text-sm Nos actions
                       ul
-                        - theme.activities.order_by_theme_interface_position.each do |activity|
+                        - theme.activities.enabled.order_by_theme_interface_position.each do |activity|
                           li = link_to activity.title, activity_path(activity)
                     .w-1/3
                       h4.uppercase.font-bold.text-sm Pages en lien
