--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -13,7 +13,7 @@
       - if @post.post_category.present?
         span.inline-block.bg-gray-200.rounded-full.px-3.py-1.text-sm.font-semibold.text-gray-700.mr-2.mb-2 
           = link_to @post.post_category.title, posts_path({by_post_category: @post.post_category.id})
-      - @post.themes.each do |theme|
+      - @post.themes.enabled.each do |theme|
         span.inline-block.bg-gray-200.rounded-full.px-3.py-1.text-sm.font-semibold.text-gray-700.mr-2.mb-2 
           = link_to theme.title, posts_path({by_theme: theme.id})
 
