--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -14,8 +14,14 @@
 
     .w-6/12.p-3
       h3.text-sm.uppercase.mb-3 Quelques actions
-      .w-full.bg-gray-500
-        p Actions mises en avant
+      .w-full.flex
+        - @highlighted_activities.each do |activity|
+          .w-1/2.px-2
+            .bg-gray-500.w-full.h-48.p-5.flex.flex-col.content-center.justify-center
+              .text-lg Je veux
+              .text-2xl = link_to activity.home_title, activity_path(activity)
+
+
     .w-3/12.p-3
       h3.text-sm.uppercase.mb-3 Je suis...
       .w-full.bg-gray-500
