Add pagination on some pages

--- a/app/views/admin/participants/index.html.slim
+++ b/app/views/admin/participants/index.html.slim
@@ -69,4 +69,4 @@ div data-controller='manage-index'
           td colspan="7"
             p.mt-3.text-center: em.text-muted Aucun·e participant·e
 
-  / = paginate @participants  
+  = paginate @participants
