--- a/app/views/admin/activities/index.html.slim
+++ b/app/views/admin/activities/index.html.slim
@@ -17,55 +17,55 @@ div data-controller='manage-index'
             id: "dropdown_action",  \
             data: {action: 'change->manage-index#submitFilterForm'}
 
-  .cadre-table
-    table.table.table-striped.table-hover.table-sm
-      thead
+  small = I18n.t(:results, count: @activities.count)
+  
+  table.table.table-striped.table-hover.table-sm
+    thead
+      tr
+        th Position
+        th Date de création
+        th Titre
+        th Thèmes
+        th Mis en avant
+
+        th
+    tbody
+      - max_position    = interface_max_position(params, "Activity") || 1
+      - position_select = (1..max_position).map { |i| [i, i] }
+
+      - @activities.each do |activity|
         tr
-          th Position
-          th Date de création
-          th Titre
-          th Thèmes
-          th Mis en avant
+          - if active_interface_filter?(params)
+            td data-controller='manage-position'
+              - interface = get_interface(activity, params)
+              = form_for interface, as: :interface, url: admin_interface_path(interface, classname: interface.class.name) do |f|
+                = f.select  :position, \
+                            options_for_select(position_select, interface.position),\
+                            {},
+                            class: "form-control form-control-sm", \
+                            data: {action: 'change->manage-position#submitSelect'}
+          - else
+            td.text-center.disabled -
+          td= l activity.created_at
+          td= activity.title
+          / td= link_to admin_intervention_levels_path(by_activity: activity.id), class: "btn btn-light btn-sm" do
+          /   span.ion-ios-list-outline>
+          /   = activity.intervention_levels.count
+          td
+            - activity.themes.each do |theme|
+              .badge.badge-secondary.mr-2
+                = theme.title
+          td.text-center
+            - if activity.highlighted?
+              = boolean_checkmark(activity.highlighted)
+          td=> link_to edit_admin_activity_path(activity), class: "btn btn-sm btn-info mr-2", title: "Editer" do
+            i.fas.fa-pen
+            = link_to admin_activity_path(activity), method: :delete, data: {confirm: "Confirmer la suppression ?"}, title: "Supprimer", class: "btn btn-sm btn-danger" do
+              i.far.fa-trash-alt
 
-          th
-      tbody
-        - max_position    = interface_max_position(params, "Activity") || 1
-        - position_select = (1..max_position).map { |i| [i, i] }
-
-        - @activities.each do |activity|
-          tr
-            - if active_interface_filter?(params)
-              td data-controller='manage-position'
-                - interface = get_interface(activity, params)
-                = form_for interface, as: :interface, url: admin_interface_path(interface, classname: interface.class.name) do |f|
-                  = f.select  :position, \
-                              options_for_select(position_select, interface.position),\
-                              {},
-                              class: "form-control form-control-sm", \
-                              data: {action: 'change->manage-position#submitSelect'}
-            - else
-              td.text-center.disabled -
-            td= l activity.created_at
-            td= activity.title
-            / td= link_to admin_intervention_levels_path(by_activity: activity.id), class: "btn btn-light btn-sm" do
-            /   span.ion-ios-list-outline>
-            /   = activity.intervention_levels.count
-            td
-              - activity.themes.each do |theme|
-                .badge.badge-secondary.mr-2
-                  = theme.title
-            td.text-center
-              - if activity.highlighted?
-                = boolean_checkmark(activity.highlighted)
-            td=> link_to edit_admin_activity_path(activity), class: "btn btn-sm btn-info mr-2", title: "Editer" do
-              i.fas.fa-pen
-              = link_to admin_activity_path(activity), method: :delete, data: {confirm: "Confirmer la suppression ?"}, title: "Supprimer", class: "btn btn-sm btn-danger" do
-                i.far.fa-trash-alt
-
-
-        - if @activities.empty?
-          tr
-            td colspan="7"
-              p.mt-3.text-center: em.text-muted Aucune action
+      - if @activities.empty?
+        tr
+          td colspan="7"
+            p.mt-3.text-center: em.text-muted Aucune action
 
   / = paginate @activities  
