--- a/app/views/admin/formations/index.html.slim
+++ b/app/views/admin/formations/index.html.slim
@@ -24,39 +24,40 @@ div data-controller='manage-index'
             id: "dropdown_action",  \
             data: {action: 'change->manage-index#submitFilterForm'}
 
-  .cadre-table
-    table.table.table-striped.table-hover.table-sm
-      thead
+  small = I18n.t(:results, count: @formations.count)
+
+  table.table.table-striped.table-hover.table-sm
+    thead
+      tr
+        th Date de création
+        th Catégorie
+        th Titre
+        th Date(s)
+        th Places restantes
+        th Participants
+
+        th
+    tbody
+      - @formations.each do |formation|
         tr
-          th Date de création
-          th Catégorie
-          th Titre
-          th Date(s)
-          th Places restantes
-          th Participants
-
-          th
-      tbody
-        - @formations.each do |formation|
-          tr
-            td= l(formation.created_at, format: :day)
-            td= formation.formation_category.title
-            td= formation.title
-            td= schedule_dates(formation.schedules.order(:time_range).pluck(:time_range))
-            td.text-center= formation.is_full? ? "COMPLET" : formation.remaining_tickets
-            td.text-center
-              = link_to admin_participants_path(by_formation: formation.id), class: "btn btn-light btn-sm" do
-                = formation.participants.count
-            td=> link_to edit_admin_formation_path(formation), class: "btn btn-sm btn-info mr-2", title: "Editer" do
-              i.fas.fa-pen
-              = link_to admin_formation_path(formation), method: :delete, data: {confirm: "Confirmer la suppression ?"}, title: "Supprimer", class: "btn btn-sm btn-danger" do
-                i.far.fa-trash-alt
+          td= l(formation.created_at, format: :day)
+          td= formation.formation_category.title
+          td= formation.title
+          td= schedule_dates(formation.schedules.order(:time_range).pluck(:time_range))
+          td.text-center= formation.is_full? ? "COMPLET" : formation.remaining_tickets
+          td.text-center
+            = link_to admin_participants_path(by_formation: formation.id), class: "btn btn-light btn-sm" do
+              = formation.participants.count
+          td=> link_to edit_admin_formation_path(formation), class: "btn btn-sm btn-info mr-2", title: "Editer" do
+            i.fas.fa-pen
+            = link_to admin_formation_path(formation), method: :delete, data: {confirm: "Confirmer la suppression ?"}, title: "Supprimer", class: "btn btn-sm btn-danger" do
+              i.far.fa-trash-alt
 
 
-        - if @formations.empty?
-          tr
-            td colspan="7"
-              p.mt-3.text-center: em.text-muted Aucune formation
+      - if @formations.empty?
+        tr
+          td colspan="7"
+            p.mt-3.text-center: em.text-muted Aucune formation
   
   = paginate @formations
   / == render partial: 'pagy/bootstrap_nav', locals: {pagy: @pagy}
