--- a/app/front/styles/application/breadcrumb.sass
+++ b/app/front/styles/application/breadcrumb.sass
@@ -1,8 +1,8 @@
 .breadcrumb
   display: flex
-  @apply .px-8
-  @apply .py-3
-  @apply .text-gray-700
+  @apply px-8
+  @apply py-3
+  @apply text-gray-700
 .breadcrumb-item:not(:last-child)
   margin-right: 0.2rem
   &:after
