--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -16,18 +16,15 @@
       h3.text-sm.uppercase.mb-3 Quelques actions
       .w-full.flex.flex-wrap
         - @highlighted_activities.each do |activity|
-          .w-1/2.px-2
-            .bg-gray-500.w-full.h-48.p-5.flex.flex-col.content-center.justify-center.mb-4
+          .w-1/2.pr-4.mb-4
+            .bg-gray-500.w-full.h-48.p-5.flex.flex-col.content-center.justify-center
               .text-lg Je veux
               .text-2xl = link_to activity.home_title, activity_path(activity)
-
 
     .w-3/12.p-3
       h3.text-sm.uppercase.mb-3 Je suis...
       .w-full.bg-gray-500
         p Liste des profils
-
-
 
 .container.mx-auto.mb-24
   .w-1/2.text-center
