--- a/app/views/admin/themes/edit.html.slim
+++ b/app/views/admin/themes/edit.html.slim
@@ -1,22 +1,5 @@
-.title-wrapper
-  h1
-    ' Édition du thème "#{@theme.title}"
+= render layout: 'admin/themes/layout_form' do
 
-  div.flex
-    = link_to admin_themes_path, class: "btn btn-light mr-4" do
-      i.fa.fa-chevron-left>
-      ' Retour
-    span.small
-      ' Créé le
-      strong => l @theme.created_at
-      ' -
-      ' Mis à jour le
-      strong = l @theme.updated_at
-
-
-  hr
-
-= form_for(@theme, as: :theme, \
-  url: admin_theme_path(@theme), html: {class: "form-horizontal"}) do |f| 
-  
-  =  render partial: "form", locals: {f: f}
+  = form_for(@theme, as: :theme, \
+    url: admin_theme_path(@theme), html: {class: "form-horizontal"}) do |f|
+    =  render partial: "form", locals: {f: f}
