Add configuration pages in admin

--- a/app/views/admin/activities/_form.html.slim
+++ b/app/views/admin/activities/_form.html.slim
@@ -43,11 +43,4 @@ div data-controller="radio-tabs"
   f: f, \
   destroy_path: f.object.image.present? ? destroy_upload_admin_activity_path(f.object, f.object.image.id, redirect: :edit) : nil}
 
-= render "admin/shared/enabled_field", f: f
-
-= render partial: 'admin/seos/fields_for_form', locals: { f: f }
-
-.action-btns
-  => f.submit class: "btn btn-primary"
-  => f.submit_and_stay class: "btn btn-outline-primary"
-  = link_to "Annuler", admin_activities_path, class: "btn btn-link"
+= render "admin/shared/action_btns", f: f, index_path: admin_activities_path
