--- a/app/views/admin/main_pages/_form.html.slim
+++ b/app/views/admin/main_pages/_form.html.slim
@@ -18,4 +18,4 @@
 
 = render "admin/resources/nested_form", f: f
 
-= render "admin/main_pages/action_btns", f: f
+= render "admin/shared/action_btns", f: f, index_path: admin_main_pages_path
