--- a/app/views/admin/main_pages/index.html.slim
+++ b/app/views/admin/main_pages/index.html.slim
@@ -1,5 +1,5 @@
 = link_to "Créer une page", new_admin_main_page_path, class:'btn btn-primary float-right'
-h1.mb-5 Pages
+h1.mb-5 Pages principales
 
 
 / = render layout: 'admin/layout' do
