--- a/app/views/admin/posts/_form.html.slim
+++ b/app/views/admin/posts/_form.html.slim
@@ -61,9 +61,5 @@ fieldset.mb-3
   f: f, \
   destroy_path: f.object.image.present? ? destroy_upload_admin_activity_path(f.object, f.object.image.id, redirect: :edit) : nil}
 
-= render partial: 'admin/seos/fields_for_form', locals: { f: f }
+= render "admin/shared/action_btns", f: f, index_path: admin_posts_path
 
-.action-btns
-  => f.submit class: "btn btn-primary"
-  => f.submit_and_stay class: "btn btn-outline-primary"
-  = link_to "Annuler", admin_activities_path, class: "btn btn-link"
