--- a/app/views/admin/formations/edit.html.slim
+++ b/app/views/admin/formations/edit.html.slim
@@ -1,19 +1,5 @@
-.title-wrapper
-  h1 Édition de la formation "#{@formation.title}"
+= render layout: 'admin/formations/layout_form' do
 
-  div.flex
-    = link_to admin_formations_path, class: "btn btn-light mr-4" do
-      i.fa.fa-chevron-left>
-      ' Retour
-    span.small
-      ' Créé le
-      strong => l @formation.created_at
-      ' -
-      ' Mis à jour le
-      strong = l @formation.updated_at
+  = form_for(@formation, url: admin_formation_path(@formation), html: {class: "form-horizontal"}) do |f| 
 
-  hr
-
-= form_for(@formation, url: admin_formation_path(@formation), html: {class: "form-horizontal"}) do |f| 
-
-  =  render partial: "form", locals: {f: f}
+    =  render partial: "form", locals: {f: f}
