--- a/app/views/admin/posts/edit.html.slim
+++ b/app/views/admin/posts/edit.html.slim
@@ -1,20 +1,5 @@
-.title-wrapper
-  h1 Édition de l'actualité "#{@post.title}"
+= render layout: 'admin/posts/layout_form' do
+  = form_for(@post, as: :post, \
+    url: admin_post_path(@post), html: {class: "form-horizontal"}) do |f| 
 
-  div.flex
-    = link_to admin_activities_path, class: "btn btn-light mr-4" do
-      i.fa.fa-chevron-left>
-      ' Retour
-    span.small
-      ' Créé le
-      strong => l @post.created_at
-      ' -
-      ' Mis à jour le
-      strong = l @post.updated_at
-
-  hr
-
-= form_for(@post, as: :post, \
-  url: admin_post_path(@post), html: {class: "form-horizontal"}) do |f| 
-
-  =  render partial: "form", locals: {f: f}
+    =  render partial: "form", locals: {f: f}
