--- a/app/views/admin/shared/_action_btns.html.slim
+++ b/app/views/admin/shared/_action_btns.html.slim
@@ -1,4 +1,4 @@
 .action-btns
   => f.submit class: "btn btn-primary"
   => f.submit_and_stay class: "btn btn-outline-primary"
-  = link_to "Annuler", admin_themes_path, class: "btn btn-link"
+  = link_to "Annuler", index_path, class: "btn btn-link"
