--- a/app/views/admin/themes/_form.html.slim
+++ b/app/views/admin/themes/_form.html.slim
@@ -18,4 +18,4 @@
 
 = render "admin/resources/nested_form", f: f
 
-= render "admin/themes/action_btns", f: f
+= render "admin/shared/action_btns", f: f, index_path: admin_themes_path
